service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
spec:
  type: ClusterIP # Changed from LoadBalancer to work with your Ingress
  ports:
  - port: 80        # Port the Ingress looks for
    targetPort: 80  # Port the Container listens on
  selector:
    app: netflix-app
